--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -4,15 +4,18 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp" 
-    android:background="#000000">
+    android:background="#009688">
 
 
     <TextView
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17dp"
-        android:textColor="#f9f93d" />
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:drawableLeft="@mipmap/bb"
+        android:text="sddsffffd"
+        android:gravity="center_vertical"
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
